# atol-qc-raw-pacbio

./: .gitignore  CHANGELOG.md  README.md  main.nf  nextflow.config  pyproject.toml
atol_qc_raw_pacbio/: __main__.py
atol_qc_raw_pacbio/workflow/: Snakefile
atol_qc_raw_pacbio/workflow/report/: stats_schema.json
atol_qc_raw_pacbio/workflow/scripts/: output_json_stats.py
modules/: bam_to_fastq.nf  cutadapt.nf  generate_stats_file.nf  read_length_summary.nf
scripts/: read_lengths.R
